# AIDevLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AI_Python/: 0-Environment_Establishment.ipynb  1-Show_Image.ipynb  Fibonacci_sequence.ipynb
AI_Python/.ipynb_checkpoints/: 0-Environment_Establishment-checkpoint.ipynb  1 - show image-checkpoint.ipynb  1-Show_Image-checkpoint.ipynb
OpticalFlow/: Sparse-optical_flow.ipynb  flow_direction.ipynb  flowiz.ipynb  predict_image.ipynb
OpticalFlow/.ipynb_checkpoints/: predict_image-checkpoint.ipynb
OpticalFlow/img/PWCNet/: frame_0010_forward.flo  frame_0011_backward.flo
OpticalFlow/img/TUM/: 36.flo  37.flo  38.flo
Pytorch/: README.md
Pytorch/model/: CIFAR10.py  test.py  train.py
Pytorch/test/: nn_cifar10.py  nn_conv2d.py  nn_linear.py  nn_loss.py  nn_maxpool.py  nn_model_load.py  nn_relu.py  nn_save_model.py  nn_sigmoid.py  test.py  vgg_pretrained.py
convex_hull/: a.out  quick_convex_hull.cpp
delaunay_triangulation/: CMakeLists.txt  delaunay_triangulation.cpp
example/: CMakeLists.txt  generatePointCloud.cpp  rot_mat_2_quaterniond.cpp
featureMatch/: CMakeLists.txt
readTUMDataset/: CMakeLists.txt  read_tum.cpp
useCPP/: CMakeLists.txt  callback_in_class.cpp  sort_fun.cpp  thread_in_class.cpp  unordered_map_example.cpp
useCamera/: CMakeLists.txt  K-matrix.cpp
useCmake/: CMakeLists.txt  main.cpp
useEigen/: CMakeLists.txt  eigenMatrix.cpp  geometry.cpp  template.cpp
useGlog/: CMakeLists.txt  example.cpp
useGlog/cmake_modules/: FindGlog.cmake
useOpenCV/GrabCut/: CMakeLists.txt
useOpenCV/datatype/: CMakeLists.txt  cv_mat.cpp
useOpenCV/imageProcess/: CMakeLists.txt  readImage.cpp
useOpenCV/useViz/: CMakeLists.txt  creating_widgets.cpp  example.cpp  histo3D.cpp  launching_viz.cpp  test.cpp  transformations.cpp  widget_pose.cpp
useOpenGL/: CMakeLists.txt  basics.cpp  geometry.cpp  glad.c  test.cpp
useOpenGL/include/glad/: glad.h
usePangolin/: CMakeLists.txt  ]  app.cfg  main.cpp  pangolinBase.h  slam14.cpp
usePangolin/cmake_modules/: FindGlog.cmake
useSophus/: CMakeLists.txt  main.cpp
